--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This module return a mix beetwen strings and numbers",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha **/*.test.js"
   },
   "repository": {
     "type": "git",
@@ -20,5 +20,9 @@
   "bugs": {
     "url": "https://github.com/ricnef2121/random-strings-numbers/issues"
   },
-  "homepage": "https://github.com/ricnef2121/random-strings-numbers#readme"
+  "homepage": "https://github.com/ricnef2121/random-strings-numbers#readme",
+  "devDependencies": {
+    "expect": "^27.2.1",
+    "mocha": "^9.1.1"
+  }
 }
